# cs184-furreal

./: .gitignore  CMakeLists.txt  README.md  final_report.html  index.html  milestone.html  project_plan.txt  project_proposal.html  styles.css
scene/: box.json  dense_fur_box.json  hair_demo.json
shaders/: Bump.frag  Custom.frag  Diffuse.frag  Displacement.frag  Displacement.vert  Fur.frag  Mirror.frag  Phong.frag
src/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/collision/: box.cpp  box.h  capsule.cpp  capsule.h  collisionObject.h  plane.cpp  plane.h  sphere.cpp  sphere.h
src/core/: bvh.cpp  bvh.h  integrator.cpp  integrator.h  meshTypes.h  particle.cpp  particle.h  spatial_hash.cpp  spatial_hash.h  spring.h  wind.cpp  wind.h
src/hair/: ftlSolver.cpp  ftlSolver.h  hairInteraction.cpp  hairInteraction.h  hairSystem.cpp  hairSystem.h  strand.cpp  strand.h
src/io/: objLoader.cpp  objLoader.h  sceneLoader.cpp  sceneLoader.h
src/rendering/: strandRenderer.cpp  strandRenderer.h
